--- a/themes/multiflex/webapp/multiflex/style.css
+++ b/themes/multiflex/webapp/multiflex/style.css
@@ -2164,6 +2164,22 @@ a.offlnk:hover {
     margin: 0 0 1% 1%;
 }
 
+.left7 {
+  float: left;
+  height: 1%;
+  left: 0;
+  margin: 0% 1% 1% 0%;
+  width: 69%;
+}
+
+.right3 {
+  float: right;
+  height: 1%;
+  margin: 0 0 1% 1%;
+  right: 0;
+  width: 29%;
+}
+
 .leftclear {
     height: 1%;
     clear: left;
