--- a/themes/rainbowstone/webapp/rainbowstone/rainbowstone-amber.less
+++ b/themes/rainbowstone/webapp/rainbowstone/rainbowstone-amber.less
@@ -1872,6 +1872,22 @@ ul.paginate-pg-list li:hover{
   width: 49%;
 }
 
+.left7 {
+  float: left;
+  height: 1%;
+  left: 0;
+  margin: 0% 1% 1% 0%;
+  width: 69%;
+}
+
+.right3 {
+  float: right;
+  height: 1%;
+  margin: 0 0 1% 1%;
+  right: 0;
+  width: 29%;
+}
+
 #column-container .right {
   float: right;
   margin-left: 1em;
